# cafex

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV-README.md  LICENSE.md  LICESNE.spdx  NOTICE  README.md  RELEASE.md  build_package.py  dev-requirements.txt  index.html  mkdocs.yml  objects.inv  pip-requirements.txt  pyproject.toml  sonar-project.properties  tox.ini  toxtool.toml
assertions/assertions/: index.html
cafex/: index.html
cafex_api/: index.html
cafex_core/: index.html
cafex_ui/: index.html
changelog/changelog/: index.html
contributing/contributing/: index.html
developer_guide/DEV-README/: index.html
docs/: index.md
docs/assertions/: assertions.md
docs/cafex/: README.md
docs/cafex_api/: README.md
docs/cafex_core/: README.md
docs/cafex_ui/: README.md
docs/developer_guide/: DEV-README.md
docs/exceptions/: exceptions.md
docs/password_mechanism/: custom_encryption.md
docs/reference/: SUMMARY.md
docs/reporting/: reporting.md
exceptions/exceptions/: index.html
libs/cafex/: .gitignore  README.md  pyproject.toml
libs/cafex/src/cafex/: __init__.py  cafex.py
libs/cafex_api/: .gitignore  pyproject.toml
libs/cafex_api/src/cafex_api/: __init__.py  api_exceptions.py  graphql_utils.py  request_builder.py  response_parser_json.py  response_parser_xml.py  socket_handler.py
libs/cafex_api/tests/: test_api_exceptions.py  test_graphql_utils.py  test_request_builder.py  test_response_parser_json.py  test_socket_handler.py
libs/cafex_core/: pyproject.toml  requirements.txt
libs/cafex_core/src/cafex_core/: __init__.py  cafex_cli.py
libs/cafex_core/src/cafex_core/handlers/: file_handler.py  folder_handler.py
libs/cafex_core/src/cafex_core/logging/: colargulog.py  logger_.py
libs/cafex_core/src/cafex_core/parsers/: html_parser.py  json_parser.py  xml_parser.py
libs/cafex_core/src/cafex_core/reporting_/: report_generator.py  reporting.py  screenshot_utils.py  step_decorator.py
libs/cafex_core/src/cafex_core/reporting_/_report_viewer/: __init__.py  app.js  index.html  styles.css
libs/cafex_core/src/cafex_core/reporting_/_report_viewer/_server_scripts/: __init__.py  _server_generator.py  _server_launcher.py
libs/cafex_core/src/cafex_core/singletons_/: execution_context.py  request_.py  session_.py
libs/cafex_core/src/cafex_core/utils/: apache_air_flow_utils.py  apache_utils.py  assertions.py  config_utils.py  core_security.py  custom_encryption.py  date_time_utils.py  elastic_search_utils.py  exceptions.py  file_reader_utils.py  file_transfer_utils.py  item_attribute_accessor.py  regex_constants.py  ssh_handler.py
libs/cafex_core/src/cafex_core/utils/apache_utils/: __init__.py  nifi_process_group_utils.py  nifi_processor_utils.py
libs/cafex_core/src/cafex_core/utils/hooks_/: hook_helper.py  hook_util.py  pytest_add_option_hook.py  pytest_after_scenario_hook.py  pytest_after_step_hook.py  pytest_bdd_before_step.py  pytest_bdd_step_error.py  pytest_before_scenario_hook.py  pytest_collection_finish_hook.py  pytest_configure_hook.py  pytest_run_test_logreport.py  pytest_run_test_make_report.py  pytest_run_test_setup.py  pytest_session_finish_.py  pytest_session_start_hook.py
libs/cafex_core/tests/: test_apache_air_flow_utils.py  test_assertions.py  test_colargulog.py  test_core_security.py  test_custom_encryption.py  test_date_time_utils.py  test_elastic_search_utils.py  test_exceptions.py  test_file_read_utils.py  test_file_reader_utils.py  test_file_transfer_utils.py  test_folder_handler.py  test_html_parser.py  test_item_attribute_accessor.py  test_json_parser.py  test_logger.py  test_nifi_process_group_utils.py  test_nifi_processor_utils.py  test_report_generator.py  test_server_generator.py  test_server_launcher.py  test_session_.py  test_ssh_handler.py  test_xml_parser.py
libs/cafex_db/: .gitignore  README.md  pyproject.toml
libs/cafex_db/src/cafex_db/: __init__.py  database_comparator.py  database_handler.py  database_operations.py  databricks_utils.py  db_exceptions.py  db_security.py  mongo_utils.py  snowflake_utils.py
libs/cafex_db/tests/: test_database_handler.py  test_database_operations.py  test_db_exception.py  test_db_security.py  test_sample.py
libs/cafex_desktop/: .gitignore  README.md  pyproject.toml
libs/cafex_desktop/src/cafex_desktop/: __init__.py
libs/cafex_desktop/src/cafex_desktop/desktop_client/: __init__.py  desktop_application_handler.py  desktop_client_driver_initializer.py  desktop_client_exceptions.py
libs/cafex_desktop/src/cafex_desktop/desktop_client/desktop_client_actions/: advanced_element_interactions.py  base_desktop_client_actions.py  desktop_element_interactions.py  window_actions.py
libs/cafex_desktop/tests/: test_desktop_client_application_handler.py  test_desktop_client_exceptions.py
libs/cafex_ui/: .gitignore  pyproject.toml
libs/cafex_ui/src/cafex_ui/: __init__.py  cafex_ui_config_utils.py  ui_security.py
libs/cafex_ui/src/cafex_ui/mobile_client/: __init__.py  mobile_client_actions.py  mobile_driver_factory.py  mobile_driver_initializer.py  mobile_utils.py
libs/cafex_ui/src/cafex_ui/web_client/: __init__.py  browserstack_integration.py  keyboard_mouse_actions.py  ui_web_driver_initializer.py  web_client_enum.py  web_driver_factory.py
libs/cafex_ui/src/cafex_ui/web_client/drivers/: chrome_driver.py  edge_driver.py  firefox_driver.py  internet_explorer_driver.py  safari_driver.py
libs/cafex_ui/src/cafex_ui/web_client/web_client_actions/: base_web_client_actions.py  element_interactions.py  utility_methods.py  webdriver_interactions.py
libs/cafex_ui/tests/: test_keyboard_mouse_actions.py  test_web_client_actions.py  test_web_driver_factory.py  web_configuration.py
license/license/: index.html
password_mechanism/custom_encryption/: index.html
reference/SUMMARY/: index.html
reference/cafex/: index.html
reference/cafex_api/: index.html
reference/cafex_core/: index.html
reference/cafex_db/: index.html
release/release/: index.html
scripts/: coverage_combine.py  gen_ref_pages.py  run_tests_and_coverage.py  versioning.py
(+366 files in other folders)
