[build-system]
requires = ["setuptools>=71.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cafex-api"
dynamic = ["version"]
description = "API Library"
authors = [
    { name = "S&P MI QA Automation Team", email = "MI_QA_Automation@spglobal.com" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cafex-core>=0.0.30",
    "zeep==4.2.1",
    "websocket-client==1.8.0"
]

keywords = ["api", "api testing", "pytest", "automation"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["__pycache__"]

[tool.setuptools.dynamic]
version = {attr = "cafex_api.__version__"}