[build-system]
requires = ["setuptools>=71.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cafex-db"
dynamic = ["version"]
description = "DB Library"
authors = [
    { name = "QA Automation Team", email = "qa_automation@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
#    "cafex-core>=0.0.30",
    "thrift==0.16.0",
    "PyHive==0.7.0",
    "snowflake-connector-python==3.8.1",
    "PyMySQL==1.1.1",
    "cx_Oracle==8.3.0",
    "pymssql==2.3.0",
    "pysnowflake==0.1.3",
    "cassandra-driver==3.29.1",
    "pymongo==4.11.2"
]
keywords = ["db", "db testing","pytest", "automation"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["__pycache__"]

[tool.setuptools.dynamic]
version = {attr = "cafex_db.__version__"}